S10P12B303-349-fix-Main-overflow

--- a/frontend/public/assets/openvidu/openvidu-webcomponent-2.29.0.css
+++ b/frontend/public/assets/openvidu/openvidu-webcomponent-2.29.0.css
@@ -2998,8 +2998,8 @@ td.mat-footer-cell {
 }
 html,
 body {
-  height: 100%;
-  overflow: hidden;
+  /* height: 100%;
+  overflow: hidden; */
 }
 body {
   margin: 0;
